# StarClinch_Backend

./: README.md  db.sqlite3  main.py  pyproject.toml  requirements.txt
project/: celery.py  settings.py  urls.py
recipes/: admin.py  apps.py  models.py  ratings.py  serializers.py  signals.py  tasks.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_initial.py  0003_recipe_cloudinary_public_id.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py
users/migrations/: 0001_initial.py
